# AudioSwitch

./: Cargo.toml  LICENSE  README.md
audio_switch_service/: Cargo.toml
audio_switch_service/src/: config.rs  dyn_icon.rs  main.rs  service.rs  tray.rs
audio_switch_setup/: Cargo.toml  build.rs
audio_switch_setup/src/: config.rs  devices.rs  hotkeys.rs  main.rs  profiles.rs  tasks.rs
config/: Cargo.toml
config/src/: lib.rs
